Spring 2025 newsletter and events

--- a/Newsletters/newsletters.html
+++ b/Newsletters/newsletters.html
@@ -267,6 +267,11 @@ function MM_swapImage() { //v3.0
                                   Winter 2024
                                   </a>
                                   </li>
+                                  <li>
+                                  <a href="https://mailchi.mp/2bb1d7d0a4b0/hart-of-the-matter-spring-2025" target="_blank">
+                                  Spring 2025
+                                  </a>
+                                  </li>
                           </ul>
                     </div>
                     For earlier editions, see <a href="https://scvhistory.com/scvhistory/googlesearchresults.htm?cx=010361867682521671142%3Abapf7zmeoby&cof=FORID%3A10&ie=ISO-8859-1&q=hart+of+the+matter&sa=Search" target="_blank">SCVhistory.com</a>
