--- a/index.htm
+++ b/index.htm
@@ -202,8 +202,8 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                 </tr>
                                 <tr>
                                   <td style="vertical-align: top;">
-                                    <a href="https://www.facebook.com/media/set/?set=a.515239427822144&type=3" target="_blank">
-                                      <img width="312" alsign="center" src="Event_Pages/silents/silents2024/Silents2024pix.jpg"/>
+                                    <a href="https://www.facebook.com/media/set/?vanity=friendsofhartpark&set=a.665100259502726" target="_blank">
+                                      <img width="312" alsign="center" src="images/2025barnyardSpring.jpg"/>
                                     </a>
                                   </td>
                                 </tr>
@@ -237,8 +237,8 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   </a>
                                   <h2>
                                   Click 
-                                  <a href="https://mailchi.mp/c2b0329b2155/hart-of-the-matter-winter-2024" target="_blank">
-                                  here for the Winter 2024 Hart of the Matter newsletter!</a><br>
+                                  <a href="https://mailchi.mp/2bb1d7d0a4b0/hart-of-the-matter-spring-2025" target="_blank">
+                                  here for the Spring 2025 Hart of the Matter newsletter!</a><br>
                                   Click <a href="Newsletters/newsletters.html"> here for other recent newsletters</a>.
                                   </h2>
                                   </td>
@@ -292,18 +292,18 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
 <!-------------------------------------------------------------------------------->
-<h2>Click below to see pictures from the Barnyard Light Tours!</h2>
-<a href= "https://www.facebook.com/media/set/?set=a.583531837659569&type=3" 
+<h2>Click below for Cowboy Festival Details!</h2>
+<a href= "https://cowboyfestival.org" 
   target="_blank"
-  title="Barnyard Light Tour">
-<img src="images/2024BarnyardLights.jpg" />
+  title="Cowboy Festival">
+<img src="Event_Pages/2025cowboyFest.jpg" />
 </a>
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <!-------------------------------------------------------------------------------->
-<h3>Click below to view photos from</h3>
-<a href="https://www.facebook.com/media/set/?set=a.558902970122456&type=3"
+<h2>Critter Fair Coming to Hart Park May 17<sup>th</sup>!</h2>
+<a href="https://scvnews.com/may-17-hart-park-critter-fair/"
    target="_blank">
-<img src="Event_Pages/powwow/2024/PowWow2024pix-lg.jpg"/>
+<img src="Event_Pages/2025critterFair.jpg"/>
 </a>
 <!--
 
@@ -324,18 +324,42 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 <!-------------------------------------------------------------------------------->
 
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-                                <h2>2024 Calendar of Events</h2>
+                                <h2>2025 Calendar of Events</h2>
                                 <h3>Click on links as details become available</h3>
                                 <table style="text-align: left; width:
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
 <tbody>
 <tr> <td id="EventDate">
-Saturdays 10:30am&ndash;12:30pm
+Saturdays 10:30am &amp; 12:30pm
 </td> <td id="Event"> 
 <a href= "Event_Pages/2022barnyardTours.png" 
 title="Barnyard Tours" rel="lightbox[barnyardTour]">
 Barnyard Tours
+</a>
+</td></tr>
+<tr> <td id="EventDate">
+Thursday Apr. 10<sup>th</sup> at 6pm at the Newhall Library
+</td> <td id="Event"> 
+<a href= "Event_Pages/2025JRSandersTalk.jpg" 
+title="JR Sanders Talk" rel="lightbox[JRSanders]">
+J.R. Sanders discusses his new novel, featuring William S. Hart
+</a>
+</td></tr>
+<tr> <td id="EventDate">
+Saturday &amp; Sunday, Apr. 12<sup>th</sup> &amp; 13<sup>th</sup> in Hart Park
+</td> <td id="Event"> 
+<a href= "https://cowboyfestival.org" target="_blank"
+title="Cowboy Festival">
+Cowboy Festival!
+</a>
+</td></tr>
+<tr> <td id="EventDate">
+Saturday May 17<sup>th</sup> 10am&ndash;2pm in Hart Park
+</td> <td id="Event"> 
+<a href= "Event_Pages/2025critterFair.jpg" 
+title="Critter Fair" rel="lightbox[CritterFair]">
+Critter Fair!
 </a>
 </td></tr>
                                     <!--
